--- a/css/style.css
+++ b/css/style.css
@@ -1,177 +1,327 @@
 .cards {
-    
-    display: grid;
-    /* Автоматически заполняем на всю ширину grid-контейнера */
-    grid-template-columns: repeat(auto-fill, 225px);
-    width: 100%;
-    max-width: 1000px; /* Ширина grid-контейнера */
-    justify-content: center;
-    justify-items: center; /* Размещаем карточку по центру */
-    column-gap: 30px; /* Отступ между колонками */
-    row-gap: 40px; /* Отступ между рядами */
-    margin: 15px auto;
-  }
-  
-  .card {
-      position: relative;
-      top: 20px;
-      width: 225px;
-      min-height: 350px;
-      box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.1);
-      display: flex;
-      flex-direction: column; /* Размещаем элементы в колонку */
-      border-radius: 12px;
-      transition: 0.2s;
-      position: relative;
-      border: rgb(255, 149, 0) 3px solid;
-    }
-    
-    /* При наведении на карточку - меняем цвет тени */
-    .card:hover {
-      box-shadow: 4px 8px 16px rgba(255, 102, 51, 0.2);
-    }
-    
-    .card__top {
-      flex: 0 0 220px; /* Задаем высоту 220px, запрещаем расширение и сужение по высоте */
-      position: relative;
-      overflow: hidden; /* Скрываем, что выходит за пределы */
-    }
-    
-    /* Контейнер для картинки */
-    .card__image {
-      display: block;
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-    }
-    
-    .card__image > img {
-      width: 100%;
-      height: 100%;
-      object-fit: contain; /* Встраиваем картинку в контейнер card__image */
-      transition: 0.2s;
-    }
-    
-    /* При наведении - увеличиваем картинку */
-    .card__image:hover > img {
-      transform: scale(1.1);
-    }
-    
-    /* Размещаем скидку на товар относительно изображения */
-    .card__label {
-      padding: 4px 8px;
-      position: absolute;
-      bottom: 10px;
-      left: 10px;
-      background: #ff6633;
-      border-radius: 4px;
-      font-weight: 400;
-      font-size: 16px;
-      color: #fff;
-    }
-    
-    .card__bottom {
-      display: flex;
-      flex-direction: column;
-      flex: 1 0 auto; /* Занимаем всю оставшуюся высоту карточки */
-      padding: 10px;
-    }
-    
-    .card__prices {
-      display: flex;
-      margin-bottom: 10px;
-      flex: 0 0 50%; /* Размещаем цены равномерно в две колонки */
-    }
-    
-    .card__prices::after {
-      content: "₽";
-      margin-left: 4px;
-      position: relative;
-    }
-    
-    .card__price--discount {
-      font-weight: 700;
-      font-size: 19px;
-      color: #414141;
-      display: flex;
-      flex-wrap: wrap-reverse;
-    }
-    
-    .card__price--discount::before {
-      content: "Со скидкой";
-      font-weight: 400;
-      font-size: 13px;
-      color: #bfbfbf;
-    }
-    
-    .card__price--common {
-      font-weight: 400;
-      font-size: 17px;
-      color: #606060;
-      display: flex;
-      flex-wrap: wrap-reverse;
-      justify-content: flex-end;
-    }
-    
-    .card__price--common::before {
-      content: "Обычная";
-      font-weight: 400;
-      font-size: 13px;
-      color: #bfbfbf;
-    }
-    
-    .card__title {
-      display: block;
-      margin-bottom: 10px;
-      font-weight: 400;
-      font-size: 17px;
-      line-height: 150%;
-      color: #414141;
-    }
-    
-    .card__title:hover {
-      color: #ff6633;
-    }
-    
-    .card__add {
-      display: block;
-      width: 100%;
-      font-weight: 400;
-      font-size: 17px;
-      color: #70c05b;
-      padding: 10px;
-      text-align: center;
-      border: 1px solid #70c05b;
-      border-radius: 4px;
-      cursor: pointer; /* Меняем курсор при наведении */
-      transition: 0.2s;
-      margin-top: auto; /* Прижимаем кнопку к низу карточки */
-    }
-    
-    .card__add:hover {
-      border: 1px solid #ff6633;
-      background-color: #ff6633;
-      color: #fff;
-    }
 
-    h1{
-      color: #ff6633;
-    }
-    main{
-      display: flex;
-      margin-bottom: 10px;
-      padding: 20px;
+  display: grid;
+  /* Автоматически заполняем на всю ширину grid-контейнера */
+  grid-template-columns: repeat(auto-fill, 225px);
+  width: 100%;
+  max-width: 1000px;
+  /* Ширина grid-контейнера */
+  justify-content: center;
+  justify-items: center;
+  /* Размещаем карточку по центру */
+  column-gap: 30px;
+  /* Отступ между колонками */
+  row-gap: 40px;
+  /* Отступ между рядами */
+  margin: 15px auto;
+}
+
+.card {
+
+  position: relative;
+  top: 20px;
+  width: 225px;
+  min-height: 350px;
+  box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  /* Размещаем элементы в колонку */
+  border-radius: 12px;
+  transition: 0.2s;
+  position: relative;
+  border: rgb(255, 149, 0) 3px solid;
+}
+
+/* При наведении на карточку - меняем цвет тени */
+.card:hover {
+  box-shadow: 4px 8px 16px rgba(255, 102, 51, 0.2);
+}
+
+.card__top {
+  flex: 0 0 220px;
+  /* Задаем высоту 220px, запрещаем расширение и сужение по высоте */
+  position: relative;
+  overflow: hidden;
+  /* Скрываем, что выходит за пределы */
+}
+
+/* Контейнер для картинки */
+.card__image {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.card__image>img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  /* Встраиваем картинку в контейнер card__image */
+  transition: 0.2s;
+}
+
+/* При наведении - увеличиваем картинку */
+.card__image:hover>img {
+  transform: scale(1.1);
+}
+
+/* Размещаем скидку на товар относительно изображения */
+.card__label {
+  padding: 4px 8px;
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  background: #ff6633;
+  border-radius: 4px;
+  font-weight: 400;
+  font-size: 16px;
+  color: #fff;
+}
+
+.card__bottom {
+  display: flex;
+  flex-direction: column;
+  flex: 1 0 auto;
+  /* Занимаем всю оставшуюся высоту карточки */
+  padding: 10px;
+}
+
+.card__prices {
+  display: flex;
+  margin-bottom: 10px;
+  flex: 0 0 50%;
+  /* Размещаем цены равномерно в две колонки */
+}
+
+.card__prices::after {
+  content: "₽";
+  margin-left: 4px;
+  position: relative;
+}
+
+.card__price--discount {
+  font-weight: 700;
+  font-size: 19px;
+  color: #414141;
+  display: flex;
+  flex-wrap: wrap-reverse;
+}
+
+.card__price--discount::before {
+  content: "Со скидкой";
+  font-weight: 400;
+  font-size: 13px;
+  color: #bfbfbf;
+}
+
+.card__price--common {
+  font-weight: 400;
+  font-size: 17px;
+  color: #606060;
+  display: flex;
+  flex-wrap: wrap-reverse;
+  justify-content: flex-end;
+}
+
+.card__price--common::before {
+  content: "Обычная";
+  font-weight: 400;
+  font-size: 13px;
+  color: #bfbfbf;
+}
+
+.card__title {
+  display: block;
+  margin-bottom: 10px;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 150%;
+  color: #414141;
+}
+
+.card__title:hover {
+  color: #ff6633;
+}
+
+.card__add {
+  display: block;
+  width: 100%;
+  font-weight: 400;
+  font-size: 17px;
+  color: #70c05b;
+  padding: 10px;
+  text-align: center;
+  border: 1px solid #70c05b;
+  border-radius: 4px;
+  cursor: pointer;
+  /* Меняем курсор при наведении */
+  transition: 0.2s;
+  margin-top: auto;
+  /* Прижимаем кнопку к низу карточки */
+}
+
+.card__add:hover {
+  border: 1px solid #ff6633;
+  background-color: #ff6633;
+  color: #fff;
+}
+
+.bus {
+  position: static;
+  display: flex;
+  justify-content: space-around;
+  background-color: #ff0000;
+  border-radius: 50px;
+  border: #414141 2px solid;
+  height: 30px;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 28px;
+  align-items: center;
+}
 
 
-    }
 
-    main > img {
-        width:  20%;
-    }
-  
-    footer img{
-      height: 100px;
-      width: 50%;
-    }
+.foo {
+  max-height: 70px;
+
+}
+
+.b {
+  color: rgb(255, 0, 0);
+}
+
+
+
+
+.H {
+  height: 3px;
+  width: 60px;
+  background-color: pink;
+  position: absolute;
+  top: 23%;
+  left: 10%;
+}
+
+.form {
+  height: 400px;
+  background-color: aliceblue;
+  padding-top: 15px;
+}
+
+form input {
+  border: 3px rgb(74, 116, 233) solid;
+  margin: 7px 10%;
+  height: 40px;
+  outline: none;
+  display: flex;
+  width: 400px;
+  padding-left: 6px;
+
+}
+
+textarea {
+  border: 3px rgb(74, 116, 233) solid;
+  height: 133px;
+  width: 40%;
+  outline: none;
+  position: absolute;
+  right: 8%;
+  top: 31%;
+}
+
+.r {
+  color: white;
+  background-color: rgb(74, 116, 233);
+  padding: 10px;
+  text-align: center;
+  width: 400px;
+  height: 40px;
+  position: absolute;
+  left: 10%;
+  cursor: pointer;
+}
+
+.footer {
+  margin-top: 50px;
+  height: 300px;
+  background-color: rgb(79, 79, 79);
+  display: flex;
+  padding-top: 40px;
+  justify-content: space-around;
+}
+
+.footer p {
+  font-size: 12px;
+  color: white;
+  padding: 3px;
+  margin-top: 20px;
+  line-height: 22px;
+}
+
+.footer span {
+  color: blue;
+  padding: 0%;
+}
+
+.footer div {
+  margin: 0 1px;
+}
+
+
+
+.rig {
+  height: 60px;
+  color: white;
+  text-align: center;
+  background-color: black;
+  padding: 25px;
+  font-size: 10px;
+}
+
+
+.rel {
+  position: relative;
+}
+
+
+.form {
+  height: 400px;
+  background-color: rgb(255, 255, 255);
+  padding-top: 15px;
+}
+
+.begin {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+  margin-left: 45px;
+  margin-right: 45px;
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+  margin-bottom: 10px;
+}
+
+.Logo {
+  height: 65px;
+  margin-right: 10px;
+}
+
+.Text {
+  display: flex;
+  align-items: center;
+  font-size: 32px;
+  color: rgb(255, 0, 0);
+
+}
+
+.footer img {
+  height: 16px;
+}
+
+.footer span {
+  color: #ffffff;
+}
