--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
-.cards {
+.d-none {
+  display: none;
+}
 
+.cards {
   display: grid;
   /* Автоматически заполняем на всю ширину grid-контейнера */
   grid-template-columns: repeat(auto-fill, 225px);
@@ -17,7 +20,6 @@
 }
 
 .card {
-
   position: relative;
   top: 20px;
   width: 225px;
@@ -55,7 +57,7 @@
   height: 100%;
 }
 
-.card__image>img {
+.card__image > img {
   width: 100%;
   height: 100%;
   object-fit: contain;
@@ -64,7 +66,7 @@
 }
 
 /* При наведении - увеличиваем картинку */
-.card__image:hover>img {
+.card__image:hover > img {
   transform: scale(1.1);
 }
 
@@ -183,19 +185,13 @@
   align-items: center;
 }
 
-
-
 .foo {
   max-height: 70px;
-
 }
 
 .b {
   color: rgb(255, 0, 0);
 }
-
-
-
 
 .H {
   height: 3px;
@@ -220,7 +216,6 @@ form input {
   display: flex;
   width: 400px;
   padding-left: 6px;
-
 }
 
 textarea {
@@ -271,8 +266,6 @@ textarea {
   margin: 0 1px;
 }
 
-
-
 .rig {
   height: 60px;
   color: white;
@@ -282,11 +275,9 @@ textarea {
   font-size: 10px;
 }
 
-
 .rel {
   position: relative;
 }
-
 
 .form {
   height: 400px;
@@ -315,7 +306,6 @@ textarea {
   align-items: center;
   font-size: 32px;
   color: rgb(255, 0, 0);
-
 }
 
 .footer img {
