--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,11 @@
   font-size: 16px;
   color: #fff;
 }
+.card__label::after {
+  content: "%";
+  margin-left: 4px;
+  position: relative;
+}
 
 .card__bottom {
   display: flex;
