--- a/css/style.css
+++ b/css/style.css
@@ -154,6 +154,7 @@
 }
 
 .card__add {
+  position: relative;
   display: block;
   width: 100%;
   font-weight: 400;
@@ -170,7 +171,16 @@
   /* Прижимаем кнопку к низу карточки */
 }
 
-.card__add:hover {
+.card_added::before {
+  content: 'В корзине';
+}
+
+.card_remove::before {
+  content: 'В корзину';
+}
+
+.card__add:hover,
+.card_active {
   border: 1px solid #ff6633;
   background-color: #ff6633;
   color: #fff;
